atualizações na página dinâmica de listar pessoas

--- a/04-web/03-envio-de-parametros/envio-parametros-python/templates/listar_pessoas.html
+++ b/04-web/03-envio-de-parametros/envio-parametros-python/templates/listar_pessoas.html
@@ -6,7 +6,7 @@
     <body>
         
         {% for pessoa in lista: %}
-            {{ pessoa.nome }} <br/>
+            {{ pessoa.nome }} <br>
         {% endfor %}
         
     </body>
