concluindo cadastro completo

--- a/07-desktop/05-cadastro-pessoas-e-livros-completo/05-cadastro-pessoas-e-livros-completo-java/src/visao/CadastroPessoas.form
+++ b/07-desktop/05-cadastro-pessoas-e-livros-completo/05-cadastro-pessoas-e-livros-completo-java/src/visao/CadastroPessoas.form
@@ -70,7 +70,7 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="btExcluirLivro" max="32767" attributes="0"/>
-                                  <Component id="jButton10" max="32767" attributes="0"/>
+                                  <Component id="btAbrirCadastroLivros" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                           </Group>
@@ -147,7 +147,7 @@
                   <Component id="btProximo" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
                   <Component id="btUltimo" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
                   <Component id="cmbLivros" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButton10" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btAbrirCadastroLivros" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -304,6 +304,9 @@
           <StringArray count="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmbLivrosActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
@@ -320,14 +323,20 @@
           <ComponentRef name="btAdicionarLivro"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btExcluirLivroActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton10">
+    <Component class="javax.swing.JButton" name="btAbrirCadastroLivros">
       <Properties>
         <Property name="text" type="java.lang.String" value="..."/>
         <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
           <ComponentRef name="txtNome"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btAbrirCadastroLivrosActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btAdicionarLivro">
       <Properties>
@@ -336,6 +345,9 @@
           <ComponentRef name="cmbLivros"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btAdicionarLivroActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btSalvar">
       <Properties>
@@ -351,6 +363,9 @@
         <Property name="text" type="java.lang.String" value="Cancelar"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btCancelarActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
