--- a/07-desktop/05-cadastro-pessoas-e-livros-completo/cadastro-pessoas-e-livros-completo/src/visao/CadastroPessoas.form
+++ b/07-desktop/05-cadastro-pessoas-e-livros-completo/cadastro-pessoas-e-livros-completo/src/visao/CadastroPessoas.form
@@ -278,6 +278,9 @@
         <Property name="text" type="java.lang.String" value="Alterar"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton5ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btExcluir">
       <Properties>
