incluir ingredientes e alterar receita

--- a/09-integracao/02-receitas-e-ingredientes/02-receitas-e-ingredientes-python/templates/listar_receitas.html
+++ b/09-integracao/02-receitas-e-ingredientes/02-receitas-e-ingredientes-python/templates/listar_receitas.html
@@ -10,7 +10,7 @@
 
         {% for receita in receitas %}
             {{ receita.nome }} 
-            <a href=listar_ingredientes_da_receita?receita_id={{receita.id}}>ingredientes...</a>
+            <a href=listar_ingredientes_da_receita?receita_id={{receita.id}}>ingredientes...</a> | <a href=form_alterar_receita?receita_id={{receita.id}}> editar </a>
         {% endfor %} 
         
     </body>
