--- a/09-integracao/02-receitas-e-ingredientes/02-receitas-e-ingredientes-python/templates/form_incluir_receita.html
+++ b/09-integracao/02-receitas-e-ingredientes/02-receitas-e-ingredientes-python/templates/form_incluir_receita.html
@@ -4,7 +4,7 @@
         <title>Formulário de inclusão de receita</title>
     </head>
     <body>
-        <h1>Inclusão de receita - passo 1</h1>
+        <h1>Inclusão de receita</h1>
         <form action=/incluir_receita>
             Nome: <input type=text name=nome> 
             <input type=submit value=Incluir>
